--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@react-leaflet/core": "^1.0.2",
     "express": "^4.17.1",
     "leaflet": "^1.7.1",
+    "leaflet-rotatedmarker": "^0.2.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
