--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pyserial==3.5
-websockets==9.1
 Flask==2.0.1
 requests==2.26.0
 wheel==0.37.0
 evdev==1.4.0
 black==21.12b0
+Flask-SocketIO==5.1.1
+eventlet==0.33.0
