--- a/web/package.json
+++ b/web/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-leaflet/core": "^1.0.2",
-    "express": "^4.17.1",
     "leaflet": "^1.7.1",
     "leaflet-rotatedmarker": "^0.2.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-leaflet": "^3.1.0",
-    "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.1"
   },
