--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-leaflet": "^3.1.0",
+    "roslib": "^1.2.0",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.1"
   },
