--- a/web/package.json
+++ b/web/package.json
@@ -12,24 +12,25 @@
     "@react-leaflet/core": "^2.0.0",
     "leaflet": "^1.8.0",
     "leaflet-rotatedmarker": "^0.2.0",
-    "next": "^12.1.6",
+    "next": "^13.4.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-leaflet": "^4.0.0",
     "roslib": "^1.2.0",
     "socket.io-client": "^4.1.3",
-    "styled-components": "^5.3.1"
+    "styled-components": "^6.0.0-rc.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.9",
     "@types/leaflet-rotatedmarker": "^0.2.2",
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.8",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.5.1",
-    "typescript": "^4.6.4"
+    "typescript": "^5.0.4"
   }
 }
