--- a/web2/package.json
+++ b/web2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-leaflet/core": "^2.1.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -16,10 +17,13 @@
     "bufferutil": "^4.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "roslib": "^1.3.0",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.2",
@@ -27,6 +31,8 @@
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/leaflet-rotatedmarker": "^0.2.2",
     "@types/roslib": "^1.3.1"
   }
 }
