--- a/web/package.json
+++ b/web/package.json
@@ -9,28 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-leaflet/core": "^2.0.0",
-    "leaflet": "^1.8.0",
-    "leaflet-rotatedmarker": "^0.2.0",
-    "next": "^13.4.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-leaflet": "^4.0.0",
-    "roslib": "^1.2.0",
-    "socket.io-client": "^4.1.3",
-    "styled-components": "^6.0.0-rc.2"
-  },
-  "devDependencies": {
-    "@types/leaflet": "^1.7.9",
-    "@types/leaflet-rotatedmarker": "^0.2.2",
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.2.7",
-    "@types/styled-components": "^5.1.26",
+    "@react-leaflet/core": "^2.1.0",
+    "@types/node": "20.2.3",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "bufferutil": "^4.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.5.1",
-    "typescript": "^5.0.4"
+    "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
+    "next": "13.4.3",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
+    "roslib": "^1.3.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4",
+    "utf-8-validate": "^6.0.3"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/leaflet-rotatedmarker": "^0.2.2",
+    "@types/roslib": "^1.3.1"
   }
 }
