--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/pubsub": "^6.0.12",
+    "@aws-amplify/ui-react": "^6.1.1",
+    "@aws-sdk/client-cognito-identity": "^3.490.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.490.0",
+    "@aws-sdk/client-iot": "^3.495.0",
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/credential-providers": "^3.490.0",
     "@react-leaflet/core": "^2.1.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "aws-amplify": "^6.0.12",
     "bufferutil": "^4.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
