--- a/web/package.json
+++ b/web/package.json
@@ -34,8 +34,10 @@
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-rotatedmarker": "^0.2.2",
-    "@types/roslib": "^1.3.1"
+    "@types/roslib": "^1.3.1",
+    "daisyui": "^4.6.1"
   }
 }
