--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "roslib": "^1.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "usehooks-ts": "^2.14.0",
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
