--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-polylines": "ts-node src/scripts/generate-polylines.ts",
+    "generate-polylines-1000": "ts-node src/scripts/generate-polylines-1000.ts"
   },
   "dependencies": {
     "@aws-amplify/pubsub": "^6.0.12",
@@ -23,6 +25,7 @@
     "eslint-config-next": "13.4.3",
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet.glify": "^3.3.1",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -39,6 +42,7 @@
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-rotatedmarker": "^0.2.2",
     "@types/roslib": "^1.3.1",
-    "daisyui": "^4.6.1"
+    "daisyui": "^4.6.1",
+    "ts-node": "^10.9.2"
   }
 }
